графы исправлены
